# structcalc

./: .gitignore  AGENTS.md  ARCHITECTURE.MD  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_beam_report.py
notebooks/: 01_loads.ipynb  02_member_check.ipynb  03-handcalcls.ipynb  Autoexpression test.ipynb  Beam with section.ipynb  Calc type 2.ipynb  Draw Rectangular RC Section.ipynb  Eurocode Beam.ipynb  Report Testing3.ipynb  Report testing 2.ipynb  Report testing 3.ipynb  Sympy testing.ipynb  beam_report.html  beam_test.ipynb.ipynb  handcalcs-beginner.html  handcalcs-beginner.ipynb  run_all.py
notebooks/executed/: 01_loads_executed.ipynb  02_member_check_executed.ipynb
src/structcalc/calculations/: __init__.py  beam.py
src/structcalc/common/: settings.py
src/structcalc/eurocode/ec2_concrete/: __init__.py  beams.py
src/structcalc/graphics/: rc_section.py
src/structcalc/reports/: __init__.py  html_report.py  report_check.py  report_expression.py  report_figure.py  report_sheet.py  report_step.py  report_table.py
src/structcalc/reports/components/: __init__.py  auto_expression.py  drawing.py  expression.py  table.py
src/structcalc/reports/renderers/: html.py
src/structcalc/reports/renderers/templates/: calculation_report_compact.html
src/structcalc/reports/templates/: calculation_report.html
src/structcalc/reports/templates/print/: a4.html
tests/: test_beam.py  test_ec2_beam.py  test_report_expression.py
